# proyecto_electrico

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: package.yml  release.yml
batView/: CMakeLists.txt  README.md  build_app.ps1  build_app.sh
batView/.github/workflows/: package.yml  release.yml
batView/build-release/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
batView/build-release/batView.app/Contents/: Info.plist
batView/build-release/batView.app/Contents/MacOS/: batView
batView/build-tests/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  batView  cmake_install.cmake  run_tests
batView/build-tests/Testing/Temporary/: CTestCostData.txt
batView/build-wx/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
batView/cmake/: Info.plist.in  batView.rc.in
batView/data/: session_stub.csv
batView/docs/: ARCHITECTURE.md  DOWNLOAD_AND_INSTALL.md  DOWNLOAD_LINUX.md  DOWNLOAD_MACOS.md  DOWNLOAD_WINDOWS.md  PROJECT_DOCUMENTATION.md
batView/examples/arduino/esp32_batview_test/: README.md  esp32_batview_test.ino
batView/examples/platformio/esp32_batview_test/: README.md  platformio.ini
batView/examples/platformio/esp32_batview_test/src/: main.cpp
batView/scripts/: build_app.py
batView/src/: main.cpp
batView/src/app/: AppController.cpp  AppController.h
batView/src/core/infrastructure/csv/: CsvExporter.cpp
batView/src/core/infrastructure/logging/: FileLogger.cpp  FileLogger.h
batView/src/core/infrastructure/serial/: MacSerialPort.h  SerialEnumerator.cpp  SerialEnumerator.h
batView/src/core/models/: BateryType.h  Measurement.h  OperationMode.h  SessionConfig.h  SessionData.cpp  SessionData.h
batView/src/core/protocol/: IMessageEncoder.h  IMessageParser.h  IProtocolCodec.h  ProtocolEncoder.cpp  ProtocolEncoder.h  ProtocolMessage.h  ProtocolParser.cpp  ProtocolParser.h  ProtocolTypes.h  ProtocolValidator.cpp  ProtocolValidator.h  TextMessageParser.cpp  TextMessageParser.h  TextProtocolCodec.cpp  TextProtocolCodec.h
batView/src/core/services/: AcquisitionService.cpp  AcquisitionService.h  ConectionService.cpp  ConnectionService.cpp  ConnectionService.h  ExportService.cpp  ExportService.h  IDataExporter.h  ILogger.h  ISerialPort.h  PlotService.cpp  PlotService.h  ProtocolSessionService.cpp  ProtocolSessionService.h
batView/src/core/ui/frames/: MainFrame.cpp  MainFrame.h
batView/src/core/ui/panels/: ConnectionPanel.cpp  ConnectionPanel.h  PlotPanel.cpp  PlotPanel.h
batView/src/core/ui/viewmodels/: MainViewModel.cpp  MainViewModel.h
batView/src/infrastructure/csv/: CsvExporter.cpp  CsvExporter.h
batView/src/infrastructure/logging/: ConsoleLogger.cpp  ConsoleLogger.h
batView/src/infrastructure/python/: PythonPlotEngine.cpp  PythonPlotEngine.h
batView/src/infrastructure/serial/: NativeSerialPort.h  PosixSerialPort.cpp  PosixSerialPort.h  SerialPortStub.cpp  SerialPortStub.h  Win32SerialPort.cpp  Win32SerialPort.h
batView/src/models/: Measurement.h
batView/src/ui/: BatViewApp.cpp  BatViewApp.h
batView/src/ui/dialogs/: ExportDialog.cpp  ExportDialog.h
batView/src/ui/frames/: MainFrame.cpp  MainFrame.h
batView/src/ui/panels/: ConnectionPanel.cpp  ConnectionPanel.h  PlotPanel.cpp  PlotPanel.h
batView/src/ui/viewmodels/: MainViewModel.cpp  MainViewModel.h
batView/tests/: AcquisitionServiceTest.cpp  ConnectionServiceTest.cpp  ExportServiceTest.cpp  PlotServiceTest.cpp
bitácora/: Edu.md  Jose.md  Rodrigo.md
code/include/: receive.h
code/src/: receive.c
cronograma/: cronograma.md
propuesta/: propuesta.md
propuesta/ciclador/: Presupuesto.md  README.md
propuesta/ciclador/PCB/: README.md
propuesta/ciclador/PLECS/: README.md
propuesta/elección_batería/: README.md
propuesta/elección_batería/batería_1/: README.md
propuesta/elección_batería/batería_2/: README.md
propuesta/elección_batería/batería_3/: README.md
propuesta/programa_sw/: Arquitectura_Logica_Capas.md  Propuesta_Arquitectura_Estructura.md  README.md  Requisitos_funcionales_principales.md  envio_datos.md  uso_wxWidgets_mac.md
propuesta/protocolo_comunicacion/: README.md
